// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with 0 as index -- show latest tag 1`] = `
<div>
  <div
    class="item"
    role="listitem"
  >
    <i
      aria-hidden="true"
      class="orange circle icon middle aligned"
    />
    <div
      class="content"
    >
      <button
        class="ui tiny header list--header-inline"
      >
        VersionFileName.js
      </button>
      <div
        class="ui purple mini tag label"
      >
        LATEST
      </div>
      <div
        class="ui mini basic image label"
      >
        <img
          alt="xuzhu"
          src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
        />
        <time
          datetime="2018-08-21T03:16:11.000Z"
          title="2018-08-21T03:16:11+00:00"
        >
          8 months ago
        </time>
      </div>
      <button
        class="ui mini basic label"
      >
        <i
          aria-hidden="true"
          class="download icon"
        />
        9.9 kB
      </button>
      <button
        class="ui mini basic icon left labeled button micro-button"
      >
        <i
          aria-hidden="true"
          class="copy icon"
        />
        FV_TT8NF09R
      </button>
      <div
        class="description"
      >
        <small
          data-testid="version-item"
        >
          <b>
            Change Summary: 
          </b>
          version description
        </small>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly with 1 as index -- show version kfId 1`] = `
<div>
  <div
    class="item"
    role="listitem"
  >
    <i
      aria-hidden="true"
      class="orange circle icon middle aligned"
    />
    <div
      class="content"
    >
      <button
        class="ui tiny header list--header-inline"
      >
        VersionFileName.js
      </button>
      <div
        class="ui mini basic image label"
      >
        <img
          alt="xuzhu"
          src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
        />
        <time
          datetime="2018-08-21T03:16:11.000Z"
          title="2018-08-21T03:16:11+00:00"
        >
          8 months ago
        </time>
      </div>
      <button
        class="ui mini basic label"
      >
        <i
          aria-hidden="true"
          class="download icon"
        />
        9.9 kB
      </button>
      <button
        class="ui mini basic icon left labeled button micro-button"
      >
        <i
          aria-hidden="true"
          class="copy icon"
        />
        FV_TT8NF09R
      </button>
      <div
        class="description"
      >
        <small
          data-testid="version-item"
        >
          <b>
            Change Summary: 
          </b>
          version description
        </small>
      </div>
    </div>
  </div>
</div>
`;
